Updated to fix menu-bar visibility
Following through on suggested solution from https://github.com/mod0/csgc-website/issues/43

Tested, and works on Safari (12.1.2) and Chrome (76.0.3809.100) for macOS.

--- a/csgc-jekyll-src/assets/css/hyde.css
+++ b/csgc-jekyll-src/assets/css/hyde.css
@@ -61,10 +61,9 @@ html {
 }
 @media (min-width: 48em) {
   .sidebar {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
     width: 18rem;
     text-align: left;
   }
@@ -107,7 +106,6 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
-    position: absolute;
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
